--- a/card.html
+++ b/card.html
@@ -45,14 +45,14 @@
     <div class="h-card">
       <img src="http://7xpvnv.com2.z0.glb.qiniucdn.com/4b0637bf-eb96-4f3e-97f3-203a9b0b1e0c" alt="">
         <div class="detail">
-          <h3>乐乐</h3>
-          <p>前端攻城狮一枚</p>
+          <h3>小饥</h3>
+          <p>前端工程师一枚，爱生活，爱和平，爱世界</p>
         </div>
        </div>
     <div class="h-card">
       <img src="http://7xpvnv.com2.z0.glb.qiniucdn.com/283a4100-10cd-4208-a3b5-4030ec03acf6" alt="">
         <div class="detail text-center">
-          <p>江山如此多娇</p>
+          <p>风景如画</p>
         </div>
     </div>
   </div>
